appId: com.curso.shopdemo
---
- launchApp:
    clearState: true
- extendedWaitUntil:
      visible:
          id: "input-email"
      timeout: 120000
- tapOn:
    id: "input-email"
- inputText: "cliente@shopdemo.com"
- tapOn:
    id: "input-senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "btn-entrar"
- assertVisible: 
    id: "tela-catalogo"

- extendedWaitUntil:
    visible: 
        id: "tela-catalogo"
    timeout: 120000

- assertVisible:
    id: "tela-catalogo"






