appId: com.curso.shopdemo
---
- launchApp:
    clearState: true
- runFlow: subflows/login.yaml
- tapOn: "Fone de Ouvido Bluetooth"
- tapOn:
    id: "btn-adicionar"
- assertVisible: "Produto adicionado com sucesso!"
- tapOn:
    id: "btn-ver-carrinho"
- assertVisible: "R$ 159,90"
- assertVisible: "Total: R$ 159,90"
- assertVisible:
    id: "btn-finalizar"
    enabled: true
- tapOn:
    id: "btn-finalizar"
- tapOn:
    id: "input-nome"
- inputText: "Martin"
- tapOn:
    id: "input-endereco"
- inputText: "Calle 14"
- tapOn:
    id: "input-cartao"
- inputText: "123-456-789"
- hideKeyboard
- tapOn:
    id: "btn-confirmar"
- assertVisible:
    id: "confirmacao-numero"
- assertVisible: "Pedido #.*"










