appId: com.curso.shopdemo
env:
    EMAIL: ${EMAIL || "cliente@shopdemo.com"}
    SENHA: ${SENHA || "123456"}
---
- extendedWaitUntil:
      visible:
          id: "input-email"
      timeout: 120000
- tapOn:
    id: "input-email"
- inputText: ${EMAIL}
- tapOn:
    id: "input-senha"
- inputText: ${SENHA}
- hideKeyboard
- tapOn:
    id: "btn-entrar"
- assertVisible: 
    id: "tela-catalogo"

- extendedWaitUntil:
    visible: 
        id: "tela-catalogo"
    timeout: 120000

- assertVisible:
    id: "tela-catalogo"